<resources>
    <string name="app_name">SoccerAlmanac</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="team_home">Team Home</string>
    <string name="team_away">Team Away</string>
    <string name="team_lineups">Team Lineups</string>
    <string name="defense">Defense</string>
    <string name="goalskeeper">Goal Keeper</string>
    <string name="forward">Forward</string>
    <string name="midfield">Midfield</string>
    <string name="substitutes">Substitutes</string>
    <string name="_0_0">0 – 0</string>
    <string name="strip">–</string>
    <string name="imgTeamHome">badge_home</string>
    <string name="imgTeamAway">badge_away</string>
    <string name="last_match">Last Match</string>
    <string name="next_match">Next Match</string>
    <string name="favorites">Favorites</string>
    <string name="football_favorites">Football Favorites</string>
    <string name="match_detail">Match Detail</string>
    <string name="no_result">No Result for</string>
    <string name="matches">Matches</string>
    <string name="teams">Teams</string>
    <string name="title_matches">Football Matches</string>
    <string name="title_teams">Football Teams</string>
    <string name="title_team_years">Years</string>
    <string name="title_stadium_name">Stadium</string>
    <string name="overview">Overview</string>
    <string name="players">Players</string>
    <string name="position">Player Position</string>
    <string name="weight">Weight (kg)</string>
    <string name="height">Height (m)</string>
    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="teams_desc">Team Desc</string>
    <string name="player_desc">Player Desc</string>
    <string name="favorites_match">Favorite Match</string>
    <string name="favorites_team">Favorite Team</string>
    <string name="search_match_hint">Search Matches Schedule</string>
    <string name="search_team_hint">Search Teams</string>
    <string name="teams_search">Team Search</string>
    <string name="match_search">Match Search</string>
    <string name="yellow_card">Yellow Card</string>
    <string name="red_card">Red Card</string>
    <string name="search_your_team">Search your team\'s matches</string>
    <string name="detail_match">detailMatch</string>
    <string name="venue">Venue</string>
    <string name="imgcover">imgCover</string>
    <string name="banner_league_1">BannerLeague1</string>
    <string name="banner_league_2">BannerLeague2</string>
    <string name="dd_mm_yyyy">dd/MM/YYYY</string>
    <string name="cari_pertandingan">Cari Pertandingan</string>
    <string name="info_detail_of_league">infoDetailOfLeague</string>
    <string name="background_league">backgroundLeague</string>
    <string name="button_to_close">buttonToClose</string>
    <string name="country">Country :</string>
    <string name="logo_league">logoLeague</string>
    <string name="search_icon">searchIcon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="soccer_matches">Soccer Matches</string>

</resources>
